# Python-code-quality

./: .gitignore  .pyre_configuration  .pytest.ini  Justfile  Makefile  README.md  cleanup.sh  noxfile.py  pyproject.toml
.github/workflows/: python-checks.yml
automatizace/: README.md  cq.sh  cq_adv.sh
bezpecnost/: README.md  bezpecnost.py
dokumentace/: README.md  README_example.md  api_complex.py  conf.py  docstrings.py  docstrings_google.py  docstrings_numpy.py  doctest_priklad.py  komentare.py  uml.py
fastapi_demo/: README.md  cq.sh
formatting/: README.md  formatting.py  formatting_autopep.py  formatting_black.py  formatting_isort.py  formatting_yapf.py
linting/: README.md  linting.py
performance/: big_o.py
performance/compilers/: README.md  numba_test.py
performance/extensions/: README.md
performance/extensions/c_extensions/: app.py  example.c  setup.py
performance/extensions/cython_example/: app.py  fib.pyx  fib_app.py  (+1 more)
performance/interpreters/: README.md  codon_test.py  get_interpreter.py
performance/profiling/: README.md  cprofile_test.py  gc_test.py  line_profiling_test.py  run_cprofile.sh  run_timeit.sh  scalene_test.py  tracemalloc_test.py
performance/pythons/: README.md  benchmark.sh  concurrency.py  cpu.py  data.py  fib.py  io.py  mandelbrot.py
project_management/pip/: dev-requirements.txt  requirements.txt  setup.py
project_management/pipenv/: Pipfile
project_management/poetry/: pyproject.toml
slozitost/: README.md  slozitost.py
testy/: coverage.sh
testy/complex/: app.py  doctest_example.py  pytest_example.py  unittest_example.py
testy/simple/: doctest_example.py  pytest_example.py  unittest_example.py
typing/: README.md  dataclass_example.py  pydantic_example.py  validators.py
(+3 files in other folders)
